Bug 241185 - Email Addresses Multiply when being dragged from Kaddressbook and dropped on a Kmail Address-Field
Summary: Email Addresses Multiply when being dragged from Kaddressbook and dropped on ...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-09 10:42 UTC by J Appel
Modified: 2010-07-22 19:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description J Appel 2010-06-09 10:42:03 UTC
Version:           unspecified (using KDE 4.4.3) 
OS:                Linux

I am trying to work around the nonfunctional import of distribution lists. I saved members of distribution lists in seperate addressbooks.

Selecting all members of an addressbook and moving them per drag & drop into the addressfield should lead to one email to each member of the addressbook. 

Instead, the more members a distribution list has, the more the addresses are being multiplied in the address field.

Reproducible: Always

Steps to Reproduce:
1. Start kaddressbook & kmail (happens also if you use these two components inside kontact)
2. Select at least two members of an addressbook
3. Start a new email from kmail
3. Move the selected addressbook entries per drag and drop to the addressfield of your new email

Actual Results:  
If you used two entries, one of them has been doubled in the address field of the email window.
The more contacts you select for drag and drop, the more they are being multiplied

Expected Results:  
Each contact should only appear once.

Happenining with KDE 4.4.4. (only up to 4.4.3 can be selected right now in bugzilla)
Comment 1 J Appel 2010-06-10 10:21:34 UTC
When dragging the contacts to a Thunderbird email window, the entries get multiplied too (as 'akonadi:?item=2201' aso.)

Hope it helps.
Comment 2 Leo Franchi 2010-07-21 15:53:07 UTC
SVN commit 1152583 by lfranchi:

Don't aggregate and multiple email addresses when dropped from another application.

BUG: 241185


 M  +2 -1      composerlineedit.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1152583
Comment 3 J Appel 2010-07-22 19:34:10 UTC
thank you : )