Don't aggregate and multiple email addresses when dropped from another application.

BUG: 241185

svn path=/branches/KDE/4.5/kdepim/; revision=1152583