messagecomposer/composerlineedit.cpp
@@ -153,11 +153,12 @@ void ComposerLineEdit::dropEvent(QDropEvent *event)
           KMessageBox::error( parentWidget(), text, caption );
         }
       }
-      // Now, let the user choose which addressee to add.
-      KABC::Addressee::List::Iterator ait;
-      foreach( const KABC::Addressee& addressee, list )
-        insertEmails( addressee.emails() );
     }
+    
+    // Now, let the user choose which addressee to add.
+    KABC::Addressee::List::Iterator ait;
+    foreach( const KABC::Addressee& addressee, list )
+      insertEmails( addressee.emails() );
   }
 
   // Case three: Let AddresseeLineEdit deal with the rest
